functions/ui-debug.log
internal/modules/cjs/loader.js:250
    throw e;
    ^

SyntaxError: Error parsing C:\Users\MM\package.json: Unexpected token < in JSON at position 0
    at JSON.parse (<anonymous>)
    at readPackage (internal/modules/cjs/loader.js:239:25)
    at readPackageScope (internal/modules/cjs/loader.js:263:19)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:970:17)
    at Module.load (internal/modules/cjs/loader.js:815:32)
    at Function.Module._load (internal/modules/cjs/loader.js:727:14)
    at Function.Module.runMain (internal/modules/cjs/loader.js:1047:10)
    at internal/main/run_main_module.js:17:11 {
  path: 'C:\\Users\\MM\\package.json'
}
